moved stuff back from blackjack.ts to index.ts

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>BlackJackRL</title>
 	<link rel="stylesheet" href="./style.scss">
-	<!-- <script src="./index.ts"></script> -->
-	<script defer src="blackjack.ts"></script>
+	<script src="./index.ts"></script>
 </head>
 <body>
 	<button id="hit-button">Hit</button>
