added tensorflow.js dependency, updated tsconfig

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	<title>BlackJackRL</title>
 	<link rel="stylesheet" href="./style.scss">
 	<script defer src="./index.ts"></script>
+	<!-- <script defer src="./tfjs.ts"></script> -->
 </head>
 <body>
 	<button id="hit-button">Hit</button>
