--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>BlackJackRL</title>
-	<link rel="stylesheet" href="./style.scss">
+	<link rel="stylesheet" href="./style.sass">
 	<script defer src="./index.ts"></script>
 	<!-- <script defer src="./tfjs.ts"></script> -->
 </head>
@@ -15,6 +15,8 @@
 		</div>
 	</nav>
 	<section class="section">
+		<div class="container" id="blackjack-player">
+		</div>
 		<div class="containter">
 			<div class="field is-grouped is-grouped-centered">
 				<p class="control">
