updated symbol and logo references

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
 	<nav class="bd-navbar navbar has-shadow is-spaced">
 		<div class="navbar-brand">
-			<img src="assets/logo.jpg" alt="Blackjack logo">
+			<img src="assets/logo.svg" alt="Blackjack logo">
 		</div>
 	</nav>
 	<section class="section">
