converted logo to png

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,11 @@
 	<script defer src="./index.ts"></script>
 	<!-- <script defer src="./tfjs.ts"></script> -->
 </head>
+
 <body>
 	<nav class="bd-navbar navbar has-shadow is-spaced">
 		<div class="navbar-brand">
-			<img src="assets/logo.svg" alt="Blackjack logo">
+			<img src="assets/logo.png" alt="Blackjack logo">
 		</div>
 	</nav>
 	<section class="section">
@@ -46,4 +48,5 @@
 		</div>
 	</footer>
 </body>
+
 </html>
