added github link

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,22 @@
 	<nav class="bd-navbar navbar has-shadow is-spaced">
 		<div class="navbar-brand">
 			<img src="assets/logo.png" alt="Blackjack logo">
+			<div class="navbar-item is-hidden-desktop">
+				<a class="button is-dark" href="https://github.com/UndergraduateArtificialIntelligenceClub/blackjackRL/" target="_blank">
+					<div class="git"></div>
+					GitHub
+				</a>
+			</div>
+		</div>
+		<div class="navbar-menu">
+			<div class="navbar-end">
+			<div class="navbar-item">
+				<a class="button is-dark" href="https://github.com/UndergraduateArtificialIntelligenceClub/blackjackRL/" target="_blank">
+					<div class="git"></div>
+					GitHub
+				</a>
+			</div>
+			</div>
 		</div>
 	</nav>
 	<section class="section">
