--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,9 @@
 		<div class="containter">
 			<div class="field is-grouped is-grouped-centered">
 				<p class="control">
+					<button class="button is-success" id="train-button">Train</button>
+				</p>
+				<p class="control">
 					<button class="button is-light" id="hit-button">Hit</button>
 				</p>
 				<p class="control">
