added play button

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,9 @@
 					<button class="button is-success" id="train-button">Train</button>
 				</p>
 				<p class="control">
+					<button class="button is-primary" id="play-button">Play for me!</button>
+				</p>
+				<p class="control">
 					<button class="button is-light" id="hit-button">Hit</button>
 				</p>
 				<p class="control">
