Will, plz fix it

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>BlackJackRL</title>
+	<title>BlackjackRL</title>
 	<link rel="stylesheet" href="./style.sass">
 	<script defer src="./index.ts"></script>
 	<!-- <script defer src="./tfjs.ts"></script> -->
@@ -87,7 +87,7 @@
 	<footer class="footer">
 		<div class="content has-text-centered">
 			<p>
-				<strong>BlackJackRL</strong> by the
+				<strong>BlackjackRL</strong> by the
 				<a href="https://uais.dev/" target="_blank" rel="noopener noreferrer">
 					Undergraduate Artificial Intelligence Society
 				</a>.
